	  to make it accurate on Unix and WIN32 at speeds up to
	  500000 timeouts/second (and 700000 on Linux), and
	  within about .001% as accurate as the system clock.

	- Fix to Fl_Valuator::step() by Guillermo Andrade.

	- Fixed the FLUID write-menu bug introduced in 1.0.10

	- Fl::flush() now calls GdiFlush() under WIN32 to
	  ensure that all graphics are drawn.


CHANGES SINCE FLTK 1.0.9

	- Added a strcasecmp() function to FLUID; AIX doesn't
	  have it.

	- Bug #115509: Fl_Scroll not repainting background.

	- Updated the configure script and makeinclude.in file
	  to work with the Sun PRO compilers.

	- Disabled the WIN32 async socket select code by default:
	  it doesn't seem to work anymore...

	- Fl::below_mouse() was incorrectly clearing e_is_click;
	  this prevented any double-clicks from getting
	  through...

	- No longer clear Fl::keysym on every event, this makes
	  better back compatability and fixes Win2000

	- Fluid now restores which tab in an Fl_Tabs was
	  selected when loads .fl files.

	- Hack to fix the annoying "raise another application
	  when a modal window is closed" problem on WIN32.

	- Fl_Tabs now draws the background behind the tabs.

	- Fl::set_fonts() on WIN32 fixed to work before the
	  first window is shown.

	- CUA function keys, code submitted by George Yohng
	  <yohng@drivex.dosware.8m.com>

	- Another attempt to get glut.h to work on WIN32.

	- Fl_Menu_::add() ignores '&' signs when comparing menu
	  items, so you don't have to make the shortcuts the
	  same all the time.

	- Fixed bit-flipping patterns in WIN32 bitmap code.

	- Fixed size of data written by gif images to .C files

	- Menu titles and buttons in the menubar can be images
	  (allows it to be used as a toolbar)

	- Reads selectBackground from the xrdb database to set
	  the selection color. Adding this to your .Xdefaults
	  will make fltk and Motif programs look much more
	  Windoze-like:

	      *selectForeground: white
	      *selectBackground: #000080
